fix: removed fonts as were causing too much page shift

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,8 @@
 
-@font-face{font-family:Allaina ;
-    src:url(.\assets\fonts\Creativemedialab-Allaina-Medium.woff);
-}
-@font-face {
-    font-family:HeroinePro ;
-    src: url(./assets\fonts\HeroinePro-CondExtraBold.woff);
-}
-
 /* CSS variables */
 :root {
-    --ff: "HeroinePro";
-    --ff-heading:"Allaina";
+    --ff: "serif" ;
+    --ff-heading:"sans serif";
     --fw-normal: 300;
     --fw-medium: 600;
     --fw-bold: 800;
